place actual portlet html in tiny

--- a/collective/tinymceportlets/resources/mceportlets.css
+++ b/collective/tinymceportlets/resources/mceportlets.css
@@ -6,3 +6,8 @@ div.tinymceportlet{
 div.contenttreeWindow{
 	z-index: 999999;
 }
+
+.TINYMCEPORTLET{
+    border: 1px dashed red;
+    font-size: 50%;
+}
